--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -11,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
     - name: Prepare
       run: |
         python --version
         python -m pip install conan
-        pip3 install conan
 
